# hbr

./: .gitignore  meson.build  org.gnome.hotelReservation.json
src/: hotelbookingreservation-application.c  hotelbookingreservation-application.h  hotelbookingreservation-window.c  hotelbookingreservation-window.h  hotelbookingreservation-window.ui  hotelbookingreservation.gresource.xml  main.c  meson.build
src/gtk/: help-overlay.ui
